themes/honey-cakes/assets/css/custom.css
/***** HONEYCAKES THEME CUSTOM STYLING *****
*
*	01 - HOUSEKEEPING
*	02 - BAKERY COLOUR PALETTE
*	03 - BLOCK STYLING (MOVED TO BLOCKS.CSS)
*	04 - WIDGET STYLING
*	05 - MEDIA QUERIES
*	06 - WOOCOMMERCE CUSTOM STYLING
*

/******************************************/

/* 01 - HOUSEKEEPING */

body {
	background: #f2f2f2;
}


h1 {
	font-size: 2em;
}

h2 {
	font-size: 1.75em;
}

h3 {
	font-size: 1.55em;
}

h4 {
	font-size: 1.35em;
}

h5 {
	font-size: 1.15em;
}

h6 {
	font-size: 1em;
}

/* 02 - BAKERY COLORS */

.b-purple {
	background: #594059;
}

.f-purple {
	color: #594059;
}

.b-orange {
	background: #F29544;
}

.f-orange {
	color: #F29544;
}

.b-brown {
	background: #A66953;
}

.f-brown {
	color: #A66953;
}

.b-white {
	background: #f2f2f2;
}

.f-white {
	color: #f2f2f2;
}

.b-black {
	background: #0d0d0d;
}

.f-black {
	color: #0d0d0d;
}

/*********************/

.main-navigation a {
	color: #fff;
	padding: 10px;
}

.main-navigation a:hover {
	color: #F29544;
}


/* 04 - WIDGET STYLING */

#shopFooter {
	margin-top: 60vh;
}



.footer-widget-title, .footer-widget-title-2, .footer-widget-title-3  {
	color: #634661;
	text-transform: uppercase;
	letter-spacing: 1px;
	padding: 10px;
}

.product-categories a {
	color: #252525;
}
.product-categories a:hover {
	color: #f29544;
	font-size: 1.25rem;
	
}

#menu-footer-menu li {
	font-size: 1.25rem;
	color: #252525;
	text-transform: capitalize;
}

a:hover, a:focus, a:active {
	color: #f29544;
}



/*********************/



/* 05 - MEDIA QUERIES */

@media only screen and (max-width: 800px) {
	#forminator-module-68 {
		width: 100%;
		margin: 0 auto;
	}

	/* centers image widget(logo) on smaller screens when in column versus row */
	.wp-image-26 {
		margin: 0 auto;
	}
}


/*******************/


/* 06. WOOCOMMERCE CUSTOM STYLING */


.wc-block-grid__products {
	justify-content: center;
}

h1 {
	text-align:center;
}


.woocommerce-breadcrumb {
	font-size: 1.15rem;
	text-align: left;
	padding: 30px;
}

.onsale {
	background: #f29544;
	padding: 10px;
	border-radius: 50%;
	color: #fff;
	z-index: 9999;
}

.product-category {
	margin: 0 auto;
	padding: 30px;
}

.tabs {
	display: flex;
	
	
}

.tabs a {
	padding: 10px;
}

.tab-description {
	padding: 10px;
	background:blue;
}

.tab-reviews {
	padding: 10px;
	background:red;
}

.single-product div.product {
	width: 70%;
	margin: 0 auto;
}

.page-content, .entry-content, .entry-summary {
	display: grid;
	padding: 20px;
}

.tabs .wc-tabs {
	display: flex;
}

/*******************/

